--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,37 +1,51 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: ["master"]
+    pull_request:
+        branches: ["master"]
 
 jobs:
-  test:
-    runs-on: macos-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
+    build:
+        runs-on: ubuntu-latest
 
-      - name: run tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 33
-          script: ./gradlew connectedCheck
-  build:
+        steps:
+            - uses: actions/checkout@v3
 
-    runs-on: ubuntu-latest
+            - name: set up JDK 17
+              uses: actions/setup-java@v3
+              with:
+                  java-version: "17"
+                  distribution: "temurin"
+                  cache: gradle
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+            - name: Change wrapper permissions
+              run: chmod +x ./gradlew
+              shell: bash
+            - name: Checkout submodules
+              run: git submodule update --init --recursive
+              shell: bash
+            - name: Download app deps
+              run: ./gradlew androidDependencies
+              shell: bash
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: bash ./gradlew build
+            - name: Build
+              run: ./gradlew clean assembleRelease
+              shell: bash
+
+            - name: Fetch public keystore
+              run: wget https://github.com/tytydraco/public-keystore/raw/main/public.jks
+              shell: bash
+
+            - name: Sign release APK
+              run: |
+                  apksigner="$(find $ANDROID_SDK_ROOT/build-tools -name apksigner | sort -r | head -n 1)"
+                  "$apksigner" sign --ks public.jks --ks-key-alias public --ks-pass pass:public --key-pass pass:public --in ./app/build/outputs/apk/release/app-release-unsigned.apk --out ./app/build/outputs/apk/release/app-release.apk
+              shell: bash
+
+            - name: Upload signed release APK
+              uses: actions/upload-artifact@v2
+              with:
+                  name: app-release
+                  path: ./app/build/outputs/apk/release/app-release.apk
