--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
-            - name: set up JDK 17
+            - name: set up jdk
               uses: actions/setup-java@v3
               with:
                   java-version: "17"
